--- a/watch.html
+++ b/watch.html
@@ -204,11 +204,12 @@ if (!id) {
             <video id="player" autoplay playsinline></video>
             <div class="subtitle" id="subtitle"></div>
             <div class="custom-controls" id="customControls">
-              <button id="playPauseBtn">⏸</button>
-              <button id="fullscreenBtn">⛶</button>
+              <button id="playPauseBtn" aria-label="Play/Pause"></button>
+              <button id="fullscreenBtn" aria-label="Fullscreen">⛶</button>
               <button id="toggleSubtitle">sub off</button>
               <select id="subtitleLang"></select>
               <input type="range" id="seekBar" min="0" max="100" value="0" step="0.1" />
+              <span id="timeDisplay" style="min-width: 90px; text-align: right; color: white;"></span>
             </div>
           </div>
         `;
@@ -261,20 +262,52 @@ if (!id) {
               const toggleBtn = document.getElementById("toggleSubtitle");
               const langSelect = document.getElementById("subtitleLang");
               const seekBar = document.getElementById("seekBar");
+              const timeDisplay = document.getElementById("timeDisplay");
               const videoWrapper = document.getElementById("videoWrapper");
               const customControls = document.getElementById("customControls");
 
-              let subtitles = [];
-              let subtitleEnabled = true;
-              let controlsVisible = true;
+              // SVG icons for consistency across devices
+              const svgPlay = '<svg width="18" height="18" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg"><path d="M8 5v14l11-7z"/></svg>';
+              const svgPause = '<svg width="18" height="18" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg"><path d="M6 5h4v14H6zM14 5h4v14h-4z"/></svg>';
 
+              function setPlayIcon() {
+                playPauseBtn.innerHTML = svgPlay;
+              }
+              function setPauseIcon() {
+                playPauseBtn.innerHTML = svgPause;
+              }
+              function formatTime(sec) {
+                if (!isFinite(sec)) return "0:00";
+                sec = Math.max(0, Math.floor(sec));
+                const h = Math.floor(sec / 3600);
+                const m = Math.floor((sec % 3600) / 60);
+                const s = sec % 60;
+                if (h > 0) {
+                  return `${h}:${String(m).padStart(2, "0")}:${String(s).padStart(2, "0")}`;
+                }
+                return `${m}:${String(s).padStart(2, "0")}`;
+              }
+              function updateTimeDisplay() {
+                const cur = video.currentTime || 0;
+                const dur = video.duration || 0;
+                timeDisplay.textContent = `${formatTime(cur)} / ${formatTime(dur)}`;
+              }
+
+              // Initialize button state based on actual playback state
+              function updatePlayPauseVisual() {
+                if (video.ended || video.paused) {
+                  setPlayIcon();
+                } else {
+                  setPauseIcon();
+                }
+              }
+
+              // Button behaviors
               playPauseBtn.addEventListener("click", () => {
-                if (video.paused) {
+                if (video.paused || video.ended) {
                   video.play();
-                  playPauseBtn.textContent = "⏸";
                 } else {
                   video.pause();
-                  playPauseBtn.textContent = "▶";
                 }
               });
 
@@ -286,6 +319,10 @@ if (!id) {
                 }
               });
 
+              let subtitles = [];
+              let subtitleEnabled = true;
+              let controlsVisible = true;
+
               toggleBtn.addEventListener("click", () => {
                 subtitleEnabled = !subtitleEnabled;
                 toggleBtn.textContent = subtitleEnabled ? "sub off" : "sub on";
@@ -294,7 +331,22 @@ if (!id) {
               });
 
               video.addEventListener("loadedmetadata", () => {
-                seekBar.max = 100;
+                // keep seekBar scale as percentage
+                updateTimeDisplay();
+                updatePlayPauseVisual();
+              });
+
+              video.addEventListener("play", () => {
+                setPauseIcon();
+              });
+              video.addEventListener("pause", () => {
+                // If paused due to end, we'll also show Play icon (handled below)
+                if (!video.ended) setPlayIcon();
+              });
+              video.addEventListener("ended", () => {
+                // Show play-from-start icon after ending
+                setPlayIcon();
+                updateTimeDisplay();
               });
 
               video.addEventListener("timeupdate", () => {
@@ -316,6 +368,7 @@ if (!id) {
                 if (!isNaN(video.duration) && video.duration > 0) {
                   seekBar.value = (video.currentTime / video.duration) * 100;
                 }
+                updateTimeDisplay();
               });
 
               seekBar.addEventListener("input", () => {
@@ -331,6 +384,7 @@ if (!id) {
                 }
               });
 
+              // subtitle loading and parsing
               function loadSubtitle(lang) {
                 const sub = info.subtitles.find(s => s.language === lang);
                 if (!sub) return;
@@ -395,6 +449,10 @@ if (!id) {
                 toggleBtn.disabled = true;
                 subtitleDiv.style.display = "none";
               }
+
+              // Set initial state after source attached
+              updatePlayPauseVisual();
+              updateTimeDisplay();
             })
             .catch(() => {
               const player = document.getElementById("player");
