--- a/signup.html
+++ b/signup.html
@@ -41,7 +41,7 @@
 
       // 大文字禁止チェック
       if (/[A-Z]/.test(user)) {
-        msg.textContent = "ユーザー名に大文字は使用できません。";
+        msg.textContent = "Usernames cannot contain uppercase letters.";
         return;
       }
 
@@ -62,4 +62,5 @@
   </script>
 </body>
 </html>
+
 
